Fix fullscreen overflows

--- a/src/scripts/components/resizable-area/resizable-area.scss
+++ b/src/scripts/components/resizable-area/resizable-area.scss
@@ -51,6 +51,7 @@
 
     &.second {
       background: var(--color-primary-5);
+      max-height: var(--h5p-idea-board-exercise-main-max-height);
       width: calc(100% - var(--resizer-position));
 
       &>div {
@@ -76,6 +77,7 @@
 
     .pane.second {
       order: 1;
+      overflow: auto;
       width: 100%;
     }
 
